[package]
name = "smol-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = { version = "1.8.0", optional = true }
async-io = { version = "2.2.2", optional = true }
futures-io = { version = "0.3.30", default-features = false, features = ["std"] }
hyper = { version = "1.1.0", default-features = false }
pin-project-lite = "0.2.13"

[features]
default = ["smol"]
smol = ["async-executor", "async-io"]
