[package]
name = "smol-hyper"
version = "0.1.1"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
description = "Integrations between smol and hyper"
license = "MIT OR Apache-2.0"
rust-version = "1.63"
repository = "https://codeberg.org/notgull/smol-hyper"
homepage = "https://codeberg.org/notgull/smol-hyper"
documentation = "https://docs.rs/smol-hyper"
keywords = ["asynchronous", "http"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
async-executor = { version = "1.11.0", optional = true }
async-io = { version = "2.2.2", optional = true }
futures-io = { version = "0.3.30", default-features = false, features = ["std"] }
hyper = { version = "1.3.1", default-features = false }
pin-project-lite = "0.2.13"

[features]
default = ["smol"]
smol = ["async-executor", "async-io"]
